...
    <string name="appName">Pokédexer</string>
    <string name="featureInProgressMessage">This area is under construction!</string>
    <string name="featureInProgressTitle">🚧 Feature WIP</string>
    <string name="dismissButtonText">Dismiss</string>
    <string name="homeTitle">What Pokémon\nare you looking for?</string>
    <string name="pokemonLabel">Pokémon</string>
    <string name="movesLabel">Moves</string>
    <string name="itemsLabel">Items</string>
    <string name="pokedexLabel">Pokédex</string>
    <string name="locationsLabel">Locations</string>
    <string name="abilitiesLabel">Abilities</string>
    <string name="typeChartsLabel">Type charts</string>
    <string name="typeChartsNavLabel">Type Charts</string>
    <string name="searchPlaceholderText">Search Pokemon, Move, Item, etc</string>
    <string name="clearSearchContentDescription">Clear search</string>
    <string name="backActionContentDescription">Back</string>
    <string name="nameTableHeader">Name</string>
    <string name="typeTableHeader">Type</string>
    <string name="categoryTableHeader">Cat</string>
    <string name="powerTableHeader">Pwr</string>
    <string name="accuracyTableHeader">Acc</string>
    <string name="levelTableHeader">Lvl</string>
    <string name="favoritesActionContentDescription">%1$s from Favorites</string>
    <string name="removeActionContentDescription">Remove</string>
    <string name="addActionContentDescription">Add</string>
    <string name="evolutionLabel">Evolution</string>
    <string name="baseStatsLabel">Base stats</string>
...
